# msgpck

./: .gitlab-ci.yml  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
msgpackers/: Cargo.toml
msgpackers/src/: enums.rs  error.rs  impl_bool.rs  impl_collections.rs  impl_floats.rs  impl_integers.rs  impl_strings.rs  lib.rs  packers.rs  piece.rs  util.rs
msgpackers_derive/: Cargo.toml
msgpackers_derive/src/: lib.rs
msgpackers_tests/: Cargo.toml
msgpackers_tests/src/: lib.rs
msgpackers_tests/tests/: pack_unpack.rs
msgpck/: Cargo.toml
msgpck-derive/: Cargo.toml
msgpck-derive/src/pack/: enums.rs  structs.rs
msgpck-derive/src/unpack/: enums.rs
msgpck-rs/: Cargo.toml
msgpck-rs-derive/: Cargo.toml
msgpck-rs-derive/src/: attribute.rs  lib.rs  pack.rs
msgpck-rs-derive/src/pack/: enums.rs  structs.rs
msgpck-rs-derive/src/unpack/: enums.rs  structs.rs
msgpck-rs-tests/: Cargo.toml
msgpck-rs-tests/src/: lib.rs
msgpck-rs-tests/tests/: enum_discriminants.rs  options.rs  pack_unpack.rs  untagged_enum.rs
msgpck-rs/src/: enums.rs  error.rs  impl_alloc.rs  impl_bool.rs  impl_bytes.rs  impl_floats.rs  impl_heapless.rs  impl_ints.rs  impl_option.rs  impl_ref.rs  impl_std.rs  impl_strings.rs  impl_uints.rs  lib.rs  marker.rs  packers.rs  piece.rs  util.rs  write.rs
msgpck-rs/src/impls/: bool.rs  option.rs
msgpck-tests/: Cargo.toml
msgpck-tests/tests/: enum_discriminants.rs  untagged_enum.rs
msgpck/proptest-regressions/: tests.txt
msgpck/proptest-regressions/impls/: enums.txt  option.txt
msgpck/src/: enums.rs  lib.rs  marker.rs  pack.rs  tests.rs  unpack.rs  utils.rs  write.rs  writers.rs
msgpck/src/impls/: alloc.rs  array.rs  bools.rs  bytes.rs  enums.rs  floats.rs  heapless07.rs  heapless08.rs  ints.rs  mod.rs  option.rs  refs.rs  std.rs  strings.rs
msgpck/src/impls/ints/: read.rs  write.rs
msgpck/src/pack/: errors.rs  helpers.rs  pack_async.rs  size_hint.rs  writers.rs
msgpck/src/unpack/: errors.rs  helpers.rs
msgpck/tests/: derive_enums.rs  derive_scalars.rs  nested.rs  scalars.rs  tests.rs
msgpck_bloat_test/: Cargo.toml
msgpck_bloat_test/src/: lib.rs  main.rs
msgpck_derive/: Cargo.toml
msgpck_derive/src/: attribute.rs  lib.rs  pack.rs
msgpck_derive/src/unpack/: structs.rs
msgpck_derive/tests/: derive_async.proptest-regressions  derive_async.rs  derive_enums.rs  derive_nested.proptest-regressions  derive_nested.rs
msgpck_derive/tests/ui/: missing_impl.rs  missing_impl.stderr
msgpck_tests/: Cargo.toml
msgpck_tests/src/: lib.rs
msgpck_tests/tests/: pack_unpack.rs
