[package]
name = "msgpck-derive"
version = "0.2.8"
description = "Derive macro for `msgpck`"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/msgpck"

edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
strum = { version = "0.25.0", features = ["derive"] }

[dependencies.syn]
version = "2"
features = ["full", "derive", "parsing", "extra-traits"]
