[package]
name = "msgpck"
version = "0.1.0-rc.1"
edition = "2021"
authors = [
    "Joakim Hulthe <joakim@technocreatives.com>",
    "Pascal Hertleif <pascal@technocreatives.com>",
]
description = "Derive macros for msgpck"
license = "MIT"

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
msgpck_derive = { version = "0.1.0", path = "../msgpck_derive", optional = true }
heapless07 = { package = "heapless", version = "0.7.16", optional = true }
thiserror = { version = "1.0.50", optional = true }
embedded-io-async = { version = "0.6.0", optional = true }
defmt = { version = "0.3.5", optional = true }

[features]
default = ["std", "derive", "async"]
# Enables support for types from the `heapless` crate, like Vec, String, LinearMap
heapless07 = ["dep:heapless07"]
# Enables support for types in the `alloc` crate, like String, HashMap, BTreeMap
alloc = ["embedded-io-async?/alloc", "defmt?/alloc"]
# Enables Debug formatting
debug = []
# Enables Debug formatting using defmt
defmt = ["dep:defmt", "embedded-io-async?/defmt-03", "heapless07?/defmt-impl"]
# Enables std library
std = [
    "debug",
    "alloc",
    "num-traits/std",
    "dep:thiserror",
    "embedded-io-async?/std",
]
# Enables derive macros
derive = ["dep:msgpck_derive"]
# Adds `inline(never)` annotations in some places
reduce-size = []
# Adds async packing for writers that support it
async = ["dep:embedded-io-async"]
# Calculate size hints for most types
size-hints = []

[dev-dependencies]
paste = "1.0.14"
proptest = "1.3.1"
proptest-derive = "0.4.0"
pretty-hex = "0.3.0"
smol = "1.3.0"
smol-potat = "1.1.2"
