[package]
name = "msgpck"
version = "0.2.8"
description = "A no-std and async compatible msgpck de/serializer"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/msgpck"

edition = "2021"
rust-version = "1.75"

[dependencies]
msgpck-derive = { version = "0.2.8", path = "../msgpck-derive" }
thiserror = { version = "1.0.50", optional = true }
heapless07 = { package = "heapless", version = "0.7.16", optional = true }
heapless08 = { package = "heapless", version = "0.8.0", optional = true }

[features]
alloc = []
std = ["alloc", "thiserror"]
