[package]
name = "msgpck_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.38", features = [
    "full",
    "derive",
    "parsing",
    "extra-traits",
] }

[dev-dependencies]
proptest = "1.3.1"
proptest-derive = "0.4.0"
