[package]
name = "msgpck_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.38", features = [
    "full",
    "derive",
    "parsing",
    "extra-traits",
] }

[dev-dependencies]
embedded-io-async = "0.6.0"
msgpck = { path = "../msgpck", features = ["async"] }
pretty-hex = "0.3.0"
proptest = "1.3.1"
proptest-derive = "0.4.0"
smol = "1.3.0"
smol-potat = "1.1.2"
trybuild = "1.0.85"
